hphp/hack/test/typecheck/dynamic/dynamic_error_message2.php.exp
File "dynamic_error_message2.php", line 5, characters 10-11:
Invalid return type (Typing[4110])
  File "dynamic_error_message2.php", line 3, characters 34-36:
  Expected `int`
  File "dynamic_error_message2.php", line 4, characters 8-11:
  But got `dynamic`, the result of calling a `dynamic` type as a function
